2008-04-21  Martin Baulig  <martin@ximian.com>

	* debug-debugger.h (MonoDebuggerInfo): Added `thread_vtable_ptr',
	`thread_vtable', `event_handler_ptr' and `event_handler'.

2008-04-21  Martin Baulig  <martin@ximian.com>

	* debug-debugger.h (MonoDebuggerInfo): Added `init_code_buffer';
	allows delayed initialization of the `executable_code_buffer' when
	attaching.

2008-04-21  Martin Baulig  <martin@ximian.com>

	* mini.h (mono_debugger_create_notification_function): Removed.
	* tramp-*.c (mono_debugger_create_notification_function): Removed.

	* mdb-debug-info64.s
	(MONO_DEBUGGER__notification_function): Added this in the .text section.

	* mdb-debug-info32.s
	(MONO_DEBUGGER__notification_function): Added this in the .text section.

	* Makefile.am: Fix the mdb-debug-info*.s logic; the debugger
	currently only works on x86 and x86_64, so don't create it on ppc.

2008-04-21  Martin Baulig  <martin@ximian.com>

	* mini.h (MonoDebugOptions): Added `mdb_optimizations'.

	* mini.c
	(mini_method_compile): In the fp elimination check, check
	`debug_options.mdb_optimizations' in addition to
	mono_debug_using_mono_debugger().	

	* driver.c (mono_main): Added `--debug=mdb-optimizations' option to
	disable some JIT optimizations which are only disabled when
	running inside the debugger.
	Added `--help-debug' option to describe the debugging options.
	(parse_debug_options): New static function to parse the `--debug'
	options, so we can easily add more stuff in future.

2008-04-20  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (set_exception_type_from_invalid_il): Avoid reading invalid memory when
	the method has no body.

2008-04-19  Jonathan Chambers <joncham@gmail.com>

	* mini-amd64.c (cpuid): Implement with MSVC intrinsic as inline
	assembly is not allowed in MSVC 64-bit compiler. 
	(mono_arch_cpu_init): Don't set floating point precision on MSVC build
	as we get floating point exceptions everywhere.
	